<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true" >
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_rent_status_item_name_textView"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/user_rent_item_group_name"
            android:layout_margin="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_rent_status_item_renting_textView"
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="@id/user_rent_status_item_name_textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/user_rent_status_item_name_textView"
            android:text="@string/user_rent_item_rent_status_renting"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_rent_status_item_rent_date_textView"
            android:layout_width="wrap_content"
            android:text="@string/user_rent_item_rent_start_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/user_rent_status_item_name_textView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/user_rent_status_item_rent_plan_date_textView"
            app:layout_constraintBottom_toTopOf="@id/user_rent_status_item_rent_date_value_textView"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_rent_status_item_rent_plan_date_textView"
            android:layout_width="wrap_content"
            android:text="@string/user_rent_item_rent_finish_plan_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/user_rent_status_item_name_textView"
            app:layout_constraintLeft_toRightOf="@id/user_rent_status_item_rent_date_textView"
            app:layout_constraintRight_toLeftOf="@id/user_rent_status_item_rent_finish_date_textView"
            app:layout_constraintBottom_toTopOf="@id/user_rent_status_item_rent_plan_date_value_textView"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_rent_status_item_rent_finish_date_textView"
            android:layout_width="wrap_content"
            android:text="@string/user_rent_item_rent_finish_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/user_rent_status_item_name_textView"
            app:layout_constraintLeft_toRightOf="@id/user_rent_status_item_rent_plan_date_textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/user_rent_status_item_rent_finish_date_value_textView"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_rent_status_item_rent_date_value_textView"
            android:layout_width="wrap_content"
            android:text="2019-12-01"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/user_rent_status_item_rent_date_textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/user_rent_status_item_rent_date_textView"
            app:layout_constraintRight_toRightOf="@id/user_rent_status_item_rent_date_textView"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_rent_status_item_rent_plan_date_value_textView"
            android:layout_width="wrap_content"
            android:text="2019-12-01"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/user_rent_status_item_rent_plan_date_textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/user_rent_status_item_rent_plan_date_textView"
            app:layout_constraintRight_toRightOf="@id/user_rent_status_item_rent_plan_date_textView"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_rent_status_item_rent_finish_date_value_textView"
            android:layout_width="wrap_content"
            android:text="2019-12-01"
            app:layout_constraintTop_toBottomOf="@id/user_rent_status_item_rent_finish_date_textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/user_rent_status_item_rent_finish_date_textView"
            app:layout_constraintRight_toRightOf="@id/user_rent_status_item_rent_finish_date_textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>